Fixed small pages jumping slightly on load when a scrollbar appears

--- a/style/base-style.css
+++ b/style/base-style.css
@@ -7,6 +7,8 @@ html
 	font-family: "Rubik", sans-serif;
 	
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	
+	overflow-y: scroll;
 }
 
 body
